--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,6 @@
         "laravel/framework": "^8.54",
         "laravel/horizon": "^5.7",
         "laravel/sanctum": "^2.11",
-        "laravel/telescope": "^4.6",
         "laravel/tinker": "^2.5",
         "predis/predis": "^1.0"
     },
@@ -21,6 +20,7 @@
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
         "laravel/sail": "^1.0.1",
+        "laravel/telescope": "^4.6",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
         "phpunit/phpunit": "^9.3.3"
@@ -54,7 +54,10 @@
     },
     "extra": {
         "laravel": {
-            "dont-discover": []
+            "dont-discover": [
+                "laravel/telescope",
+                "laravel/horizon"
+            ]
         }
     },
     "config": {
