--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "license": "MIT",
     "require": {
         "php": "^7.3|^8.0",
+        "botman/botman": "^2.6",
+        "botman/driver-telegram": "^1.6",
+        "botman/driver-web": "^1.5",
         "composer/composer": "2.1.9",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
