--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "barryvdh/laravel-ide-helper": "^2.10",
         "facade/ignition": "^2.5",
         "fakerphp/faker": "^1.9.1",
+        "itsgoingd/clockwork": "^5.1",
         "laravel/sail": "^1.0.1",
         "laravel/telescope": "^4.6",
         "mockery/mockery": "^1.4.2",
