--- a/.env.example
+++ b/.env.example
@@ -16,7 +16,7 @@ DB_PASSWORD=
 
 BROADCAST_DRIVER=pusher
 CACHE_DRIVER=redis
-FILESYSTEM_DRIVER=local
+FILESYSTEM_DISK=local
 QUEUE_CONNECTION=redis
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
